Sub-timers in getGlobbedResourceURIs